Closed Bug 954354 Opened 10 years ago Closed 10 years ago

Crash in tray toolkit: mintrayr::platform::WndProc

Categories

(Instantbird Graveyard :: Other, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: clokep, Assigned: nmaier)

Details

*** Original post on bio 921 at 2011-07-12 12:16:00 UTC ***

One of our top crashers is a crash in tray toolkit that needs to be investigated: http://crash-stats.instantbird.com/report/list?product=Instantbird&platform=windows&query_search=signature&query_type=exact&query=&date=&range_value=2&range_unit=weeks&process_type=all&plugin_field=&plugin_query_type=&plugin_query=&do_query=1&signature=mintrayr%3A%3Aplatform%3A%3AWndProc

This crash has apparently been around since 0.2 (when MinTrayR was an extension).

CC'ing Nils Maier, in case he has any expertise in the matter.
*** Original post on bio 921 by Nils Maier [:nmaier] <maierman AT web.de> at 2011-07-12 12:29:14 UTC ***

Instantbird ships an outdated version of trayToolkit. I fixed a couple of crash bugs a while back that initially weren't triggered, but started to show after some Windows Update it seems.

I suggest you update the XPCOM stuff from https://github.com/nmaier/mintrayr/commits/0.9.x
*** Original post on bio 921 at 2011-07-12 12:53:58 UTC ***

(In reply to comment #1)
> Instantbird ships an outdated version of trayToolkit. I fixed a couple of crash
> bugs a while back that initially weren't triggered, but started to show after
> some Windows Update it seems.
> I suggest you update the XPCOM stuff from
> https://github.com/nmaier/mintrayr/commits/0.9.x

It seems we're using 0.9.3 (from [1]) and I just checked the latest commits. The only ones we're missing are version number bumps, so I'm not sure this wil help our crasher.  It seems to be related to https://github.com/nmaier/mintrayr/commit/17bf22f4d30a8482a32e607331ab7e5b34dc3b80 though.

[1] https://wiki.instantbird.org/Instantbird:Third_party_code
Assignee: nobody → clokep
Status: NEW → ASSIGNED
*** Original post on bio 921 by Nils Maier [:nmaier] <maierman AT web.de> at 2011-07-12 13:41:31 UTC ***

Alright, I had a closer look and this seems to be a genuine bug in MinTrayR.

Should be fixed by https://github.com/nmaier/mintrayr/commit/c7d780b0ff5b796e8c9e8d1ea4ce2e9159f37afe

I suggest you pull that change in for now instead of waiting for a new release, as I'm going to refactor the whole repo first so that I can more easily maintain different branches of the component for different mozilla versions (thanks mozdevs for abandoning bin-compat :p)
*** Original post on bio 921 at 2011-07-13 00:06:44 UTC ***

I pushed your fix as http://hg.instantbird.org/instantbird/rev/9afd5ee23c4a
Thanks for looking into this! :)
Assignee: clokep → bugzilla
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 1.1
Version: trunk → 1.0
There was missing email mapping information for this bug during the BIO to BMO merge, manually assigning this bug.
Assignee: bugzilla → maierman
You need to log in before you can comment on or make changes to this bug.