Bug 954354 - Crash [@ mintrayr::platform::WndProc].